update with bug

--- a/templates/log_in.html
+++ b/templates/log_in.html
@@ -15,7 +15,7 @@
             <p class="tags">Enter a name: <input type = "text" name = "name"><br>
             {{password_text}}</p>
             <p class="tags">Enter a password: <input type = "text" name = "password", value=""></p>
-            <p><input type="submit" value="Enter"><a href = "/">Don't have an account?</a></p>
+            <p><input type="submit" value="Enter" class="submit_button"><a href = "/">Don't have an account?</a></p>
         </div>
         </form>
     </div>
