--- a/tracking_app/static/tracking_app/style.css
+++ b/tracking_app/static/tracking_app/style.css
@@ -1,8 +1,10 @@
 .registring {
-    background: #c6caed;
+    background: #4C061D;
     border-radius: 30px;
     padding: 30px;
     text-align: center;
+    color: #ffffff;
+    border: 5px solid #EDD9A3;
 }
 
 body {
@@ -14,6 +16,7 @@ body {
     background: #c6caed;
     border-radius: 30px;
     padding: 30px;
+    border: 5px solid #EDD9A3;
 }
 
 .tags {
@@ -34,12 +37,23 @@ body {
     background-color: #379f80;
 }
 
+.delete_button {
+    background-color: #e41616;
+    border-color: #4f6d7a;
+    border-radius: 10px;
+    border-width: 5px;
+}
+
+.delete_button:hover {
+    background-color: #a91212;
+}
+
 .link_button {
     height: 40px;
     background-color: #c5b8ff;
     border-color: #4f6d7a;
     border-radius: 10px;
-    border-width: 2px;
+    border-width: 4px;
 }
 
 .link_button:hover {
@@ -51,11 +65,12 @@ body {
     border-radius: 30px;
     padding: 10px;
     margin-bottom: 20px;
+    border: 5px solid #D17A22;
 }
 
 .header{
     position: fixed;
-    background-color: #c6caed;
+    background-color: #4C061D;
     padding: 10px;
     padding-right: 30px;
     text-align: right;
@@ -71,4 +86,17 @@ body {
 .task_card {
     text-decoration: none; /* Прибрати підкреслення */
     color: #4C061D
+}
+
+.white_text {
+    color: #ffffff;
+}
+
+.header_text {
+    color: #ffffff;
+    margin-right: 20%;
+}
+
+.task_name {
+    font-weight: 700;
 }
