--- a/tracking_app/static/tracking_app/style.css
+++ b/tracking_app/static/tracking_app/style.css
@@ -19,6 +19,15 @@ body {
     border: 5px solid #EDD9A3;
 }
 
+.comments_list {
+    background: #4C061D;
+    border-radius: 30px;
+    padding: 30px;
+    border: 5px solid #EDD9A3;
+    margin-top: 20px;
+
+}
+
 .tags {
     background-color: #4f6d7a;
     padding: 10px;
@@ -74,13 +83,25 @@ body {
     padding: 10px;
     padding-right: 30px;
     text-align: right;
-    margin-top: -120px;
+    margin-top: -65px;
     margin-left: -20px;
     width: 99%;
 }
 
+.panel {
+    margin-top: 65px;
+    background-color: #4C061D;
+    padding: 10px;
+    padding-right: 30px;
+    text-align: right;
+    margin-left: -20px;
+    width: 99%;
+    border: 5px solid #D17A22;
+    background-color: #c6caed;
+}
+
 .tasks_list {
-    margin-top: 120px;
+    margin-top: 20px;
 }
 
 .task_card {
